@@ -1,3 +1,8 @@
+2022-02-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* support/makebin/makebin.c:
+	  Fix segmentation fault when using -yp and patching of wrong address.
+
 2022-02-03 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* doc/sdccman.lyx:
